Autoboot Coco, Esc/Break boots to config

--- a/clients/cross-platform/Makefile.coco
+++ b/clients/cross-platform/Makefile.coco
@@ -1,7 +1,3 @@
-# NOTE: Update the CMOC_SRC to the cmoc source directory to include its own <..> header files
-
-CMOC_SRC := ~/Documents/projects/cmoc-0.1.88/src
-
 PACKAGE = lobby
 VERSION = 1.0.0
 TARGET = coco
@@ -20,7 +16,7 @@ DEPS := $(OBJS:.o=.d)
 
 # Required libraries.
 
-FUJINET_LIB_VERSION=4.7.4
+FUJINET_LIB_VERSION=4.8.2
 CURRENT_TARGET=coco
 
 # this downloads fujinet-lib and populates FUJINET_LIB_VERSION_DIR and FUJINET_LIB_NAME
@@ -30,19 +26,13 @@ LIBS = \
 	-L$(FUJINET_LIB_VERSION_DIR) -l:$(FUJINET_LIB_NAME) 
 
 CFLAGS= \
-			-I $(CMOC_SRC) \
 			-I src/include \
 			-I $(FUJINET_LIB_VERSION_DIR) \
 			--$(TARGET) \
 			--intermediate \
 			--intdir ./intermediates \
-			--stack-space=512 \
-			-fomit-frame-pointer \
-			-DNDEBUG \
-			-DVERSION=\"$(VERSION)\" \
-			-O2
-#			--check-null \
-#			-D_CMOC_CHECK_STACK_OVERFLOW_ --check-stack\
+			--stack-space=256 \
+            --no-relocate
 
 
 LDFLAGS= 			--$(TARGET) \
@@ -62,7 +52,7 @@ $(BUILD_DIR)/$(TARGET_EXEC): .get_fujinet_lib $(OBJS)
 	$(RM) $(TARGET_EXEC) $(TARGET_EXEC).dsk
 	
 	decb dskini $(TARGET_EXEC).dsk
-#	decb copy -t -0 src/coco/autoexec.bas $(TARGET_EXEC).dsk,AUTOEXEC.BAS
+	decb copy -t -0 src/coco/autoexec.bas $(TARGET_EXEC).dsk,AUTOEXEC.BAS
 	writecocofile $(TARGET_EXEC).dsk $(TARGET_EXEC).bin
 ifeq ($(OS),Windows_NT) 
 	@echo ........................................................................ & dir $(TARGET_EXEC).bin | find "$(TARGET_EXEC).bin" &echo ........................................................................
@@ -70,13 +60,18 @@ else
 	@echo ........................................................................ ;ls -l $(TARGET_EXEC).bin;echo ........................................................................
 endif
 
-# Copy to local SD drive for fast testing
-	cp $(CURDIR)/$(TARGET_EXEC).dsk ~/Documents/fujinetpc-coco/SD/$(DSK)
-	cp $(CURDIR)/$(TARGET_EXEC).dsk ~/Documents/projects/fujinet-firmware/build/dist/SD/$(DSK)
+#   ###### Emulator testing ######
 
-	-killall -q wine64-preloader;cd ~/mame_coco;mame coco3 -window -nomaximize -resolution 1024x768  -natural
-#	-killall -q wine64-preloader;cd ~/mame_coco;mame coco3 -window -nomaximize -resolution 1024x768  -natural -autoboot_delay 1 -autoboot_command "runm\"lobby\n"
-#	-killall -q wine64-preloader;cd ~/mame_coco;mame coco -debug -window -nomaximize -resolution 1024x768 -natural -autoboot_delay 2 -autoboot_command "run\"lobby\n"
+#   Copy to local SD drive for fast testing
+#	cp $(CURDIR)/$(TARGET_EXEC).dsk ~/Documents/fujinetpc-coco/SD
+
+#   Mount the disk in FujiNet-PC (assumes host 1 is SD)
+#	curl -s "http://localhost:8000/browse/host/1/$(TARGET_EXEC).dsk?action=newmount&slot=1&mode=r" >/dev/null
+#	curl -s "http://localhost:8000/mount?mountall=1&redirect=1" >/dev/null
+
+#   Run in emulator
+#	cd ~/mame_coco;mame coco3 -nodebug -throttle -ui_active -window -nomaximize -resolution 1024x768 -natural
+#	cd ~/mame_coco;mame coco -nodebug -throttle -ui_active -window -nomaximize -resolution 1024x768 -natural
 
 # c source
 $(BUILD_DIR)/%.c.o: %.c
